--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,3 +1,4 @@
+// file: .vscode/launch.json
 {
     "version": "0.2.0",
     "inputs": [
@@ -27,8 +28,8 @@
     "configurations": [
         {
             "name": "Launch",
-            "type": "cppvsdbg", // for Windows
-            // "type": "lldb", // for Linux | macOs
+            // "type": "cppvsdbg", // for Windows
+            "type": "lldb", // for Linux | macOs
             "request": "launch",
             "program": "${workspaceFolder}/lispy-zig/${input:targetProject}/zig-out/bin/${input:targetProject}",
             "args": [
@@ -39,7 +40,7 @@
             // "environment": [],
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": "build",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
         }
     ],
 }
